--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,21 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.6.5",
-    "sequelize": "^6.35.1"
+    "morgan": "^1.10.0",
+    "mysql2": "^3.7.0",
+    "sequelize": "^6.35.2",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
+    "nodemon": "^3.0.2"
+  },
+  "scripts": {
+    "start": "nodemon src/index.js",
+    "dev": "npx nodemon src/index.js",
+    "test": "echo 'Error: no test specified' && exit 1"
   }
 }
