--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.5",
+    "bulma": "^0.9.4",
+    "fake": "^0.2.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-calendar": "^4.8.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.2",
+    "sweetalert2": "^11.10.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
